2011-02-07  Vadim Kurland  <vadim@netcitadel.com>

	* AddressTableDialog.cpp (browse): fixes #1914 "Address table
	object file name is not created properly if user clicks outside
	Editor panel"

2011-02-06  vadim  <vadim@netcitadel.com>

	* SSHUnx.cpp (SSHUnx): fixes #2049 "Installer reports success even
	if there was an error while creating static routes". Added our own
	error message generated when command used to add static route
	fails to the list of error messages recognized by the installer.

	* OSConfigurator_freebsd.cpp (updateBridgeOfInterface): see #1889, #2043
	Added support for bridge interface configuration in BSD.

2011-02-05  vadim  <vadim@netcitadel.com>

	* SSHUnx.cpp (SSHUnx): see #2039 "Installer reports success even
	if pfctl can't load config file". Added more pfctl error messages
	to the list to make code more robust.

	* CompilerDriver_pf.cpp (printStaticOptions): fixes #2038 "pfctl
	error when firewall settings include scrub option for reassembly".
	Command "scrub all reassemble tcp" does not allow direction.
	Tested and verified on OpenBSD 4.2 and FreeBSD 8.1

2011-02-04  vadim  <vadim@netcitadel.com>

	* freebsdInterfaces.cpp (manageIpAddresses): fixes #2032 "support
	for DHCP interfaces in rc.conf mode". Include dynamic interfaces
	inin the list of interfaces generated script manages when the
	script is in rc.conf format. This addds lines similar to
	'ifconfig_em0="DHCP"'.

2011-02-03  vadim  <vadim@netcitadel.com>

	* RoutingCompiler_freebsd_writers.cpp (RoutingRuleToString): fixes
	#2026 Compiler can now generate static routing configuration
	in rc.conf format for FreeBSD.

	* pfAdvancedDialog.cpp (pfAdvancedDialog): fixes #2021 "since
	rc.conf format is only supported for FreeBSD, the option in the
	dialog should not be available for other OS"

2011-02-02  vadim  <vadim@netcitadel.com>

	* OSConfigurator_freebsd.cpp: see #1888 "Add option to generate
	rc.conf.local file for BSD systems". Added ability to generate