@@ -152,7 +152,7 @@ int main(int argc, char **argv)
         }
         driver.compile();
         delete objdb;
-        return 0;
+        return (driver.getStatus() == BaseCompiler::SUCCESS) ? 0 : 1;
 
     } catch(const FWException &ex) 
     {
