@@ -746,6 +746,7 @@ QString CompilerDriver_ipt::run(const std::string &cluster_id,
     }
     catch (FWException &ex)
     {
+        status = ERROR;
         return QString::fromUtf8(ex.toString().c_str());
     }
     
