@@ -416,6 +416,7 @@ QString CompilerDriver_ipf::run(const std::string &cluster_id,
     }
     catch (FWException &ex)
     {
+        status = ERROR;
         return QString::fromUtf8(ex.toString().c_str());
     }
     
