@@ -338,6 +338,7 @@ QString CompilerDriver_ipfw::run(const std::string &cluster_id,
     }
     catch (FWException &ex)
     {
+        status = ERROR;
         return QString::fromUtf8(ex.toString().c_str());
     }
 
