@@ -685,6 +685,7 @@ QString CompilerDriver_pf::run(const std::string &cluster_id,
     }
     catch (FWException &ex)
     {
+        status = ERROR;
         return QString::fromUtf8(ex.toString().c_str());
     }
 
